--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "version":"1.0",
     "type": "1",
     "require": {
-        "php": "8.1"
+        "php": "^8.1"
     },
     "license": "MIT",
     "autoload": {
